# otcse-reproduce

./: .gitignore  README.md  config.yaml  pyproject.toml
hf_implementation/: dataset.py  evaluation.py  feature_extractor.py  optimal_transport.py  sermodel.py  simsiam.py  train.py  trainer.py
models/: dataset.py  ser_model.py  simsiam.py  train.py  trainer.py
